Fire Journal 5.0.04 (4.0.24) to TestFlight - changes to NIMSICS214 structure. Use of relationships and context menus. Some nice changes.
dj 08232022

--- a/Fire Journal/Cells/LabelTextFieldCell.xib
+++ b/Fire Journal/Cells/LabelTextFieldCell.xib
@@ -24,6 +24,9 @@
                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" adjustsFontSizeToFit="NO" minimumFontSize="14" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="fQU-jp-ulG">
                         <rect key="frame" x="20" y="42" width="416" height="34"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="34" id="DFU-Of-Nq5"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <textInputTraits key="textInputTraits" autocapitalizationType="words" enablesReturnKeyAutomatically="YES"/>
                         <connections>
